Updated news events to have all tools.

--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -20,6 +20,217 @@
   }
 %}
 
+
+{% set AtSubP = {
+    title: "AtSubP",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/atsubp.png?a=height&w=6&h=6",
+    date: "Jan 1, 2012",
+    desc: " 	The present tool is developed as a part of our broader study focused on investigating the advantages of developing",
+    link: "/AtSubP/index.php/"
+  }
+%}
+
+{% set rbpred = {
+    title: "RB-Pred",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/rbpred.PNG?a=height&w=6&h=6",
+    date: "April 1, 2012",
+    desc: "Rice blast (Pyricularia grisea) continues to be the most destructive disease of rice despite decades of research towards its control.",
+    link: "https://webs.iiitd.edu.in/raghava/rbpred/"
+  }
+%}
+
+{% set rslpred = {
+    title: "RSLpred",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/rslpred.PNG?a=height&w=6&h=6",
+    date: "Jan 1, 2013",
+    desc: "RICE (Oryza sativa L.) is the single most important agricultural resource which feeds more than half of the world's population.",
+    link: "/raghava/rslpred/"
+  }
+%}
+
+{% set PLpred = {
+    title: "PLpred",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/plpred.PNG?a=height&w=6&h=6",
+    date: "April 1, 2013",
+    desc: "Although plastids are of significant biological interest, 
+    our current understanding of the metabolite functions and capacities of different plastid types is still limited.",
+    link: "/PLpred/"
+  }
+%}
+
+{% set lacsubpred = {
+    title: "LacSubPred",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/lacsubpred.PNG?a=height&w=6&h=6",
+    date: " Jan 1, 2017",
+    desc: "Laccases (E.C. 1.10.3.2) are multi-copper oxidases that have gained importance in many industries such as biofuels, 
+    pulp production, textile dye bleaching,",
+    link: "/lacsubpred/"
+  }
+%}
+
+{% set APiNET = {
+    title: "AP-iNET",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/api-net.PNG?a=height&w=6&h=6",
+    date: "April 1, 2017",
+    desc: "AP-iNET is a computational prediction system for host-pathogen protein-protein interactions in the Arabidopsis-Pseudomonas model system.",
+    link: "/AP-iNET/"
+  }
+%}
+
+{% set ligpred = {
+    title: "LigPred",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/ligpred.PNG?a=height&w=6&h=6",
+    date: "July 1,2017",
+    desc: "LigPred is an attempt to discover novel lignin related proteins not discoverable through more general means.",
+    link: "/ligpred/"
+  }
+%}
+
+{% set PredHPI = {
+    title: "PredHPI",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/predHpi.PNG?a=height&w=6&h=6",
+    date: "Jan 1, 2018",
+    desc: " Host-Pathogen Interactions (HPI), which includes from the initial invasion of host cells by the pathogen through the proliferation 
+    of pathogen in their host, are studied to find potential genomic targets for the development of novel drugs, vaccines, and other therapeutics.",
+    link: "/PredHPI/"
+  }
+%}
+
+{% set GreeningDB = {
+    title: "GreeningDB",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/greeningdb.png?a=height&w=6&h=6",
+    date: "April 1, 2018",
+    desc: "Here we present GreeningDB, a database implemented to provide to general audience the annotation of liberibacter proteomes, 
+    and a host-pathogen comparactomics tool",
+    link: "/GreeningDB/"
+  }
+%}
+
+{% set PlantmSubP = {
+    title: "Plant-mSubP",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/plantmSubp.PNG?a=height&w=6&h=6",
+    date: "July 1, 2018",
+    desc: "Identification of the subcellular location of protein has been an area of interest in protein science.",
+    link: "/Plant-mSubP/"
+  }
+%}
+
+{% set citSATdb = {
+    title: "citSATdb",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/citsatdb.png?a=height&w=6&h=6",
+    date: "Jan 1, 2019",
+    desc: "The Citrus genus and its associated genera (Poncirus, Microcitrus, Fourtunella and Eremocitrus) are \
+    part of Aurantioideae subfamily of Rutaceae family,",
+    link: "/citSATdb/"
+  }
+%}
+
+{% set legumeSSRdb = {
+    title: "LegumeSSRdb",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/legumessdb.png?a=height&w=6&h=6",
+    date: "April 1, 2019",
+    desc: "Legumes are the second most essential group of crops with around ~700 genera and ~19,000 known Legume species in the world.",
+    link: "/legumeSSRdb/"
+  }
+%}
+
+{% set ranchSATdb = {
+    title: "ranchSATdb",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/ranchsatdb.png?a=height&w=6&h=6",
+    date: "July 1, 2019",
+    desc: "A database on the Bos taurus.",
+    link: "/ranchSATdb/"
+  }
+%}
+
+{% set pyseqrna = {
+    title: "pySeqRNA",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/pyseqrna.png?a=height&w=6&h=6",
+    date: "Jan 1, 2020",
+    desc: "Today, massive amounts of data are generated by Next-Generation Sequencing (NGS) technologies. In recent years, many algorithms, statistical methods, and software tools have been developed to perform the 
+    individual analysis steps of various NGS applications.",
+    link: "/pyseqrna/"
+  }
+%}
+
+{% set hucopia = {
+    title: "HuCoPIA",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/covid.jpg?a=height&w=6&h=6",
+    date: "Jan 1, 2021",
+    desc: "We present the HuCoPIA database, which contains approximately 100,000 protein-protein interactions between human proteins and three 
+    strains (SARS-CoV-2, SARS-CoV and MERS) of betacoronavirus.",
+    link: "/hucopia/home/"
+  }
+%}
+
+{% set malivhu = {
+    title: "Malivhu",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/malivhu.png?a=height&w=6&h=6",
+    date: "April 1, 2021",
+    desc: "Malivhu lets the user input two protein sequences: the virus and the host proteins.",
+    link: "/malivhu/"
+  }
+%}
+
+{% set alfanet = {
+    title: "alfaNET",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/alfanet.png?a=height&w=6&h=6",
+    date: "July 1, 2021",
+    desc: "Alfalfa (Medicago sativa L.), belonging to family Fabaceae, is a highly desired forage legume in the 
+    United States and in the countries around the world.",
+    link: "/alfanet/"
+  }
+%}
+
+{% set weconet = {
+    title: "WeCoNET",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/weconet.png?a=height&w=6&h=6",
+    date: "Oct 1, 2021",
+    desc: "Wheat (Triticum aestivum), the most widely cultivated crop in the world, ranks third and counts to 
+    around 35% of the total grains produced around the globe.",
+    link: "/weconet/"
+  }
+%}
+
+{% set deepNEC = {
+    title: "deepNEC",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/deepnec.png?a=height&w=6&h=6",
+    date: "Dec 1, 2021",
+    desc: "We propose deepNEC, a novel end-to-end feature selection and classification model training approach for nitrogen biochemical 
+    network-related enzyme prediction.",
+    link: "/deepNEC/"
+  }
+%}
+
+{% set tritikbdb = {
+    title: "TritiKBdb",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/tritikbdb.png?a=height&w=6&h=6",
+    date: "Jan 1, 2022",
+    desc: "Here, we report the development of a comprehensive database and webserver, TritiKBdb, that implements various tools to study the protein-protein interactions in the 
+    Triticum species-Tilletia indica pathosystem.",
+    link: "/tritikbdb/"
+  }
+%}
+
+{% set trustdb = {
+    title: "TRustDB",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/trustdb2.png?a=height&w=6&h=6",
+    date: "April 1, 2022",
+    desc: "TRustDB, a database for Triticum aestivum -Puccinia species protein-protein interactions, provides valuable information about the Puccinia species, 
+    which includes various functional protein annotations",
+    link: "/trustdb/"
+  }
+%}
+
+{% set hucovaria = {
+    title: "HuCoVarIA",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/hucovaria.jpg?a=height&w=6&h=6",
+    date: "Oct 1, 2022",
+    desc: "SARS-CoV-2, a betacoronavirus, and the pathogen that causes COVID-19, has impacted the world in a variety of ways.",
+    link: "/hucovaria/"
+  }
+%}
+
 {% set apogeeInstruments = {
     title: "Raghav Awarded Campbell Scientific Graduate Fellowship",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/news/apogeeInstruments.jpg?a=height&w=6&h=6",
@@ -205,6 +416,7 @@ benchmark were implement in the DeepHPI webserver",
 %}
 
 {% set general = [mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
-{% set science = [profeatx,alfanet,newdeephpi,covidtracker] %}
+{% set science = [profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
+ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
 {% set latest = [cultivate, capitolHill, boundaries] %}
