--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -26,7 +26,7 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/atsubp.png?a=height&w=6&h=6",
     date: "Jan 1, 2012",
     desc: " 	The present tool is developed as a part of our broader study focused on investigating the advantages of developing",
-    link: "/AtSubP/index.php/"
+    link: "https://www.zhaolab.org/AtSubP/index.php/"
   }
 %}
 
@@ -44,7 +44,7 @@
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/tools/rslpred.PNG?a=height&w=6&h=6",
     date: "Jan 1, 2013",
     desc: "RICE (Oryza sativa L.) is the single most important agricultural resource which feeds more than half of the world's population.",
-    link: "/raghava/rslpred/"
+    link: "https://webs.iiitd.edu.in/raghava/rslpred/"
   }
 %}
 
