Updated colors on news page buttons.

--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -14,3 +14,4 @@
 @import './components/card';
 @import './components/img-header';
 @import './components/news-card';
+@import './components/news-section';
