--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,9 +1,23 @@
 {% set pub2022 = [
+  {
+    authors:'<u><em>Kataria, R</em></u>. and Kaundal, R<sup>*</sup>',
+    content:'TRustDB: A comprehensive bioinformatics resource for understanding the complete Wheat - Stem Rust host-pathogen interactome. <em>Database</em> (in press). IF=4.462',
+    doiLink:'trustdb/',
+    doiTitle:'http://bioinfo.usu.edu/trustdb/',
+    year:'2022'
+  },
+  {
+    authors:'<u><em>Duhan, N.</em></u><sup>$</sup>, <u><em>Kataria, R.</em></u><sup>$</sup> and Kaundal, R<sup>*</sup>',
+    content:'TritiKBdb: A functional annotation resource for deciphering the complete interaction networks in Wheat - Karnal Bunt pathosystem. <em>International Journal of Molecular Sciences</em> <b>23</b>(13): 7455. IF=6.208. PMID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9267065/" class="kbl-link" target="_blank">9267065</a>',
+    doiLink:'https://doi.org/10.3390/ijms23137455',
+    doiTitle:'https://doi.org/10.3390/ijms23137455',
+    year:'2022'
+  },
     {
     authors:'<u><em>Kataria, R.</em></u> and Kaundal, R<sup>*</sup>.',
-    content:'Deciphering the Crosstalk Mechanisms of Wheat-Stem Rust pathosystem: Genome-scale prediction Unravels Novel Host Targets. <em>Frontiers in Plant Science</em>. IF=5.753.',
-    doiLink:'publications?content=pub',
-    doiTitle:'(In Press)',
+    content:'Deciphering the Crosstalk Mechanisms of Wheat-Stem Rust pathosystem: Genome-scale prediction Unravels Novel Host Targets. <em>Frontiers in Plant Science</em>. IF=5.753. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35800602" class="kbl-link" target="_blank">35800602</a>',
+    doiLink:'https://doi.org/10.3389/fpls.2022.895480',
+    doiTitle:'https://doi.org/10.3389/fpls.2022.895480',
     year:'2022'
   },
     {
