--- a/src/views/pages/publications/subpages/dates/20-22.njk
+++ b/src/views/pages/publications/subpages/dates/20-22.njk
@@ -1,20 +1,48 @@
 {% set pub2022 = [
   {
-    authors:'<b>Kaundal, R<sup>*</sup></b>., <em><u>Duhan, N.</u></em>, Acharya, B.R., Pudussery, M.V., Ferreira, J.F.S., Suarez, D.L. and Sandhu, D<sup>*</sup>.',
+    authors:'<u><em>Guevara, D</em></u>. and Kaundal, R<sup>*</sup>.',
+    location:'The 30th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Monona Terrace Convention Center, Madison (WI), USA;',
+    desc:'ProFeatX: a parallelized protein feature extraction suite for machine learning.',
+    date:'July 10-14',
+    type:'Poster'
+  },
+  {
+    authors:'<em><u>Duhan, N</u></em>. and Kaundal, R<sup>*</sup>',
+    location:'The 30th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Monona Terrace Convention Center, Madison (WI), USA;',
+    desc:'An automated Python package for Next-Generation Sequencing data analysis and report generation.',
+    date:'July 10-14',
+    type:'Poster'
+  },
+  {
+    authors:'<em><u>Kataria, R</u></em>. and Kaundal, R<sup>*</sup>',
+    location:'The 30th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Monona Terrace Convention Center, Madison (WI), USA;',
+    desc:'Genome-scale Protein Interactome: Unraveling Novel Host Targets in Wheat-Stem Rust Pathosystem.',
+    date:'July 10-14',
+    type:'Poster'
+  },
+  {
+    authors:'Mahalingam, R., Bregitzer, P., <u><em>Duhan, N</em></u>. and Kaundal, R.',
+    location:'Plant and Animal Genomes Conference (PAG Asia). Virtual Conference;',
+    desc:'Transcriptome analysis of Barley lines with contrasting responses to abiotic stresses.',
+    date:'June 22-24',
+    type:'Oral'
+  },
+  {
+    authors:'Kaundal, R<sup>*</sup>., <em><u>Duhan, N.</u></em>, Acharya, B.R., Pudussery, M.V., Ferreira, J.F.S., Suarez, D.L. and Sandhu, D<sup>*</sup>.',
     location:'Conference on Applied Statistics in Agriculture and Natural Resources; Utah State University (USU), Logan (UT), USA',
     desc:'Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in Alfalfa.',
     date:'May 18',
     type:'Oral'
   },
   {
-    authors:'<em><u>Guevara, D.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
+    authors:'<em><u>Guevara, D.</u></em> and Kaundal, R<sup>*</sup>.',
     location:'Conference on Applied Statistics in Agriculture and Natural Resources; Utah State University (USU), Logan (UT), USA',
     desc:'Malivhu: a Web Server for Predicting Human-Virus Protein-Protein Interactions Using Machine Learning Algorithms.',
     date:'May 18',
     type:'Oral'
   },
   {
-    authors:'<em><u>Duhan, N.</u></em> and <b>Kaundal, R<sup>*</sup></b>.',
+    authors:'<em><u>Duhan, N.</u></em> and Kaundal, R<sup>*</sup>.',
     location:'Conference on Applied Statistics in Agriculture and Natural Resources; Utah State University (USU), Logan (UT), USA',
     desc:'pySeqRNA: An Automated Python Package for RNA Sequencing Data Analysis.',
     date:'May 18',
