Updated position of news subpages.

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -1,3 +1,16 @@
+{% set simar = {
+    name: "Simardeep Kaur",
+    subtitle: "",
+    modifier: "Kaur",
+    type: "",
+    bio: "",
+    email: "",
+    img: "",
+    social: [
+      {type: "", link: ""}
+    ]
+  }
+%}
 {% set roussie = {
     name: "Rousselene B. Larson",
     subtitle: "Bioinformatics Scientist",
