Added Simardeep to the people page.

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -1,14 +1,19 @@
 {% set simar = {
     name: "Simardeep Kaur",
-    subtitle: "",
+    subtitle: "PhD Plant Biochemistry",
     modifier: "Kaur",
-    type: "",
-    bio: "",
-    email: "",
-    img: "",
-    social: [
-      {type: "", link: ""}
-    ]
+    type: "Graduate",
+    bio: "Miss Simardeep Kaur is a Nehru Doctoral Fulbright fellow at KAABiL Laboratory, 
+    USU. Her doctoral thesis focuses on deciphering the microRNA related modulations in contrasting 
+    rice genotypes under drought stress. As a Fulbright fellow she will be learning 
+    bioinformatic tools and softwares for comprehensive analysis of the data generated 
+    from her molecular biology related work from wet-lab experiments. She will be improving 
+    her skills to handle larger data set like those for methylome, transcriptome, lncRNAs, miRNAs, 
+    validation techniques and their analysis so that she can integrate molecular biology with 
+    bioinformatics to develop the drought tolerant agricultural crops.",
+    email: "Simar2809@gmail.com",
+    img: "/image/raw/bioinfo/profile/simardeep.jpg",
+    social: []
   }
 %}
 {% set roussie = {
@@ -269,6 +274,6 @@
 {% set staff = [naveen, shelby, raghav, roussie] %}
 
 {% set bioinfoStaff = [roussie] %}
-{% set gradStudents = [naveen, raghav, david] %}
+{% set gradStudents = [naveen, raghav, david, simar] %}
 {% set undergradStudents = [colin, kolton, andrew, mitchell] %}
 {% set alumni = [shelby, caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
