Added news event for Mitchell.

--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,3 +1,14 @@
+{% set mitchellGoodbye = {
+    title: "Mitchell Millerberg Finishes his Internship",
+    img: "http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/mitchell.jpg",
+    date: "Aug 8, 2022",
+    desc: "As Mitchell finishes his summer internship with us in the Animal Dairy & Veterinary Sciences 
+    department, we celebrate with pizza and soda pop. We had a short interview with him to ask him how his 
+    experience in the lab was.",
+    link: "/news/mitchellFinishesInternship/"
+  }
+%}
+
 {% set simar = {
     title: "New Intern: Simardeep Kaur",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/simardeep.jpg?a=height&w=6&h=6",
@@ -431,7 +442,7 @@ benchmark were implement in the DeepHPI webserver",
   }
 %}
 
-{% set general = [simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
+{% set general = [mitchellGoodbye, simar, mitchell, apogeeInstruments, newAdminColin,newAndrew,koltonGrant,newDavid,newKolton,citsatdb,newadmin1] %}
 {% set science = [profeatx, hucovaria, trustdb, tritikbdb, deepNEC, weconet, alfanet, malivhu, hucopia,covidtracker, pyseqrna,newdeephpi,
 ranchSATdb, legumeSSRdb, citSATdb, PlantmSubP, GreeningDB, PredHPI, ligpred, APiNET, lacsubpred, PLpred, rslpred, rbpred, AtSubP] %}
 {% set media = [cultivate, capitolHill, boundaries, weedRevolution, heroesNight,nihFunds,saltStress,undergradGrants] %}
