Updated news and event titles.

--- a/src/views/pages/events/mitchellFarewell/mitchellFarewell.njk
+++ b/src/views/pages/events/mitchellFarewell/mitchellFarewell.njk
@@ -20,4 +20,4 @@
   }
 %}
 
-{{ eventPage("Mitchell Finishes His Internship", "mitchellFarewell", event) }}
+{{ eventPage("Mitchell Millerberg Completes Summer Internship", "mitchellFarewell", event) }}
