--- a/src/views/pages/news/data.njk
+++ b/src/views/pages/news/data.njk
@@ -1,6 +1,6 @@
 {% set mitchellGoodbye = {
-    title: "Mitchell Millerberg Finishes his Internship",
-    img: "http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/mitchell.jpg",
+    title: "Mitchell Millerberg Completes Summer Internship",
+    img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/events/2022-Mitchell-Farewell/PXL_20220812_194602003.MP.jpg?a=height&w=6&h=6",
     date: "Aug 8, 2022",
     desc: "As Mitchell finishes his summer internship with us in the Animal Dairy & Veterinary Sciences 
     department, we celebrate with pizza and soda pop. We had a short interview with him to ask him how his 
@@ -10,7 +10,7 @@
 %}
 
 {% set simar = {
-    title: "New Intern: Simardeep Kaur",
+    title: "Fulbright Scholar Joins the Lab: Simardeep Kaur",
     img: "http://bioinfocore.usu.edu/raikou/image/aspect/bioinfo/profile/simardeep.jpg?a=height&w=6&h=6",
     date: "Aug 1, 2022",
     desc: "Miss Simardeep Kaur is a Nehru Doctoral Fulbright fellow at KAABiL Laboratory, 
