--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -1,6 +1,6 @@
 {% set simar = {
     name: "Simardeep Kaur",
-    subtitle: "PhD Plant Biochemistry",
+    subtitle: "PhD | Plant Biochemistry",
     modifier: "Kaur",
     type: "Graduate",
     bio: "Miss Simardeep Kaur is a Nehru Doctoral Fulbright fellow at KAABiL Laboratory, 
