--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -32,7 +32,7 @@
             <div class="col-sm-6">
             {% set mitchellFarewell = {
                 link: '/events/mitchellFarewell',
-                title: 'Mitchell Finishes His Internship',
+                title: 'Mitchell Millerberg Completes Summer Internship',
                 location: 'Utah State University, Logan, UT',
                 date: 'Aug 8, 2022',
                 img: '/image/bioinfo/events/2022-Mitchell-Farewell/PXL_20220812_194602003.MP.jpg'
