--- a/src/views/pages/news/mitchellFinishesInternship/mitchellFinishesInternship.njk
+++ b/src/views/pages/news/mitchellFinishesInternship/mitchellFinishesInternship.njk
@@ -1,3 +1,3 @@
 {% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newNewsPage("Mitchell Millerberg Finishes his Internship", "mitchellFinishesInternship","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/mitchell.jpg") }}
+{{ newNewsPage("Mitchell Millerberg Completes Summer Internship", "mitchellFinishesInternship","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/events/2022-Mitchell-Farewell/PXL_20220812_194602003.MP.jpg") }}
