--- a/src/views/pages/news/simar/simar.njk
+++ b/src/views/pages/news/simar/simar.njk
@@ -1,3 +1,3 @@
 {% from "pages/news/template.njk" import newNewsPage %}
 
-{{ newNewsPage("New Intern: Simardeep Kaur", "simar","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/simardeep.jpg") }}
+{{ newNewsPage("Fulbright Scholar Joins the Lab: Simardeep Kaur", "simar","http://bioinfocore.usu.edu/raikou/image/raw/bioinfo/profile/simardeep.jpg") }}
