--- a/src/views/pages/publications/subpages/dates/20-22.njk
+++ b/src/views/pages/publications/subpages/dates/20-22.njk
@@ -4,21 +4,21 @@
     location:'The 30th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Monona Terrace Convention Center, Madison (WI), USA;',
     desc:'ProFeatX: a parallelized protein feature extraction suite for machine learning.',
     date:'July 10-14',
-    type:'Poster'
+    type:'Virtual Presentation'
   },
   {
     authors:'<em><u>Duhan, N</u></em>. and Kaundal, R<sup>*</sup>',
     location:'The 30th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Monona Terrace Convention Center, Madison (WI), USA;',
     desc:'An automated Python package for Next-Generation Sequencing data analysis and report generation.',
     date:'July 10-14',
-    type:'Poster'
+    type:'Virtual Presentation'
   },
   {
     authors:'<em><u>Kataria, R</u></em>. and Kaundal, R<sup>*</sup>',
     location:'The 30th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Monona Terrace Convention Center, Madison (WI), USA;',
     desc:'Genome-scale Protein Interactome: Unraveling Novel Host Targets in Wheat-Stem Rust Pathosystem.',
     date:'July 10-14',
-    type:'Poster'
+    type:'Virtual Presentation'
   },
   {
     authors:'Mahalingam, R., Bregitzer, P., <u><em>Duhan, N</em></u>. and Kaundal, R.',
