--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,35 +1,35 @@
 {% set pub2022 = [
   {
     authors:'<u><em>Kataria, R</em></u>. and Kaundal, R<sup>*</sup>',
-    content:'TRustDB: A comprehensive bioinformatics resource for understanding the complete Wheat - Stem Rust host-pathogen interactome. <em>Database</em> (in press). IF=4.462',
+    content:'TRustDB: A comprehensive bioinformatics resource for understanding the complete Wheat - Stem Rust host-pathogen interactome. <em>Database</em> (in press).',
     doiLink:'trustdb/',
     doiTitle:'http://bioinfo.usu.edu/trustdb/',
     year:'2022'
   },
   {
     authors:'<u><em>Duhan, N.</em></u><sup>$</sup>, <u><em>Kataria, R.</em></u><sup>$</sup> and Kaundal, R<sup>*</sup>',
-    content:'TritiKBdb: A functional annotation resource for deciphering the complete interaction networks in Wheat - Karnal Bunt pathosystem. <em>International Journal of Molecular Sciences</em> <b>23</b>(13): 7455. IF=6.208. PMID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9267065/" class="kbl-link" target="_blank">9267065</a>',
+    content:'TritiKBdb: A functional annotation resource for deciphering the complete interaction networks in Wheat - Karnal Bunt pathosystem. <em>International Journal of Molecular Sciences</em> <b>23</b>(13): 7455. PMID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9267065/" class="kbl-link" target="_blank">9267065</a>',
     doiLink:'https://doi.org/10.3390/ijms23137455',
     doiTitle:'https://doi.org/10.3390/ijms23137455',
     year:'2022'
   },
     {
     authors:'<u><em>Kataria, R.</em></u> and Kaundal, R<sup>*</sup>.',
-    content:'Deciphering the Crosstalk Mechanisms of Wheat-Stem Rust pathosystem: Genome-scale prediction Unravels Novel Host Targets. <em>Frontiers in Plant Science</em>. IF=5.753. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35800602" class="kbl-link" target="_blank">35800602</a>',
+    content:'Deciphering the Crosstalk Mechanisms of Wheat-Stem Rust pathosystem: Genome-scale prediction Unravels Novel Host Targets. <em>Frontiers in Plant Science</em>. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35800602" class="kbl-link" target="_blank">35800602</a>',
     doiLink:'https://doi.org/10.3389/fpls.2022.895480',
     doiTitle:'https://doi.org/10.3389/fpls.2022.895480',
     year:'2022'
   },
     {
     authors:'<em><u>Kataria, R.</u></em> and Kaundal, R<sup>*</sup>.',
-    content:'WeCoNET: A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em> 18, Article number: 73 (2022). IF=5.321. PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9164323/" class="kbl-link" target="_blank">9164323</a>',
+    content:'WeCoNET: A Host-Pathogen Interactome Database for Deciphering Crucial Molecular Networks of Wheat-Common bunt Cross-talk Mechanisms. <em>BMC Plant Methods</em> 18, Article number: 73 (2022). PMCID: <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/pmc9164323/" class="kbl-link" target="_blank">9164323</a>',
     doiLink:'https://doi.org/10.1186/s13007-022-00897-9',
     doiTitle:'https://doi.org/10.1186/s13007-022-00897-9',
     year:'2022'
   },
   {
     authors:'Kaundal, R.<sup>$*</sup>, <em><u>Loaiza, C.D.</u></em><sup>$</sup>, <em><u>Duhan, N.</u></em> and Flann, N.',
-    content:'deepHPI: a comprehensive Deep Learning platform for accurate prediction and visualization of host-pathogen protein-protein interactions. <em>Briefings in Bioinformatics</em> bbac125: 1-11. IF=11.622. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35511057/" class="kbl-link" target="_blank">35511057</a>',
+    content:'deepHPI: a comprehensive Deep Learning platform for accurate prediction and visualization of host-pathogen protein-protein interactions. <em>Briefings in Bioinformatics</em> bbac125: 1-11. PMID: <a href="https://pubmed.ncbi.nlm.nih.gov/35511057/" class="kbl-link" target="_blank">35511057</a>',
     doiLink:'https://doi.org/10.1093/bib/bbac125',
     doiTitle:'https://doi.org/10.1093/bib/bbac125',
     year:'2022'
