Moving mitchell to Alumni.

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -275,5 +275,5 @@
 
 {% set bioinfoStaff = [roussie] %}
 {% set gradStudents = [naveen, raghav, david, simar] %}
-{% set undergradStudents = [colin, kolton, andrew, mitchell] %}
-{% set alumni = [shelby, caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
+{% set undergradStudents = [colin, kolton, andrew] %}
+{% set alumni = [mitchell, shelby, caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
